styles.css
* {
  box-sizing: border-box;
}

body {
  font-family: 'Open Sans', sans-serif;
  margin: 0;
}

.parent {
  display: flex;
  flex-direction: column;
}

.child-1 {
  background-color: #455a64;
  overflow: hidden;
  height: 40%;
}

h1 {
  color: #fff;
  font-size: 1.5em;
  text-align: center;
  margin: 10px 0 5px 0;
}

.logo {
  height: 20px;
  margin: 0 5px;
}

.input {
  border-style: groove;
  border-width: thin;
  display: block;
  font-size: 1.1em;
  height: 35px;
  margin: 15px auto;
  padding-left: 8px;
  width: 85%;
}

#enter-button {
  background-color: #ffc107;
  border: none;
  color: #fff;
  font-weight: 800;
}

#enter-button:hover {
  background-color: #ffd773;
  color: #fff;
}

.input:focus {
  outline-color: #cfd8dc;
  outline-style: outset;
  outline-width: 2px;
}

.child-2 {
  background-color: #cfd8dc;
  height: 60%;
  overflow: hidden;
}

#bookmark {
  background-color: #fff;
  border: 2px solid #607d8b;
  margin: 20px;
}

hr {
  margin: 10px;
  border: 0;
  height: 1px;
  background-image: linear-gradient(to right, rgba(207, 216, 220, 0.20), rgba(207, 216, 220, 1), rgba(207, 216, 220, 0.20));
}

#site-title {
  color: #455a64;
  font-size: 1.3em;
  margin: 5px 10px;
}

.clickable {
  background: none;
  border: none;
  color: #607d8b;
  margin: 0 10px;
  text-decoration: underline;
  text-decoration-color: #f2f4f4;
}

.clickable:hover {
  text-decoration: underline;
  text-decoration-color: #ffc107;
}

.clickable:focus {
  outline: 0;
}

/*#delete {
  float: right;
}*/

#site-url:hover,
#read:hover {
  font-weight: 800;
}

/*=======Media Queries=======*/

@media screen and (min-width: 894px) {
.parent {
  flex-direction: row;
}

.child-1,
.child-2 {
  height: 100vh;
  width: 50%
}

.child-1 {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.input {
  width: 70%;
}
h1 {
  font-size: 3.5em;
}

.logo {
  height: 45px;
  margin: 0 10px;
}

}

